@@ -11,6 +11,7 @@ undefine([AC_ISC_POSIX])
 AC_DEFUN(AC_ISC_POSIX,
   [
     dnl This test replaces the obsolescent AC_ISC_POSIX kludge.
-    AC_CHECK_LIB(cposix, strerror, [LIBS="$LIBS -lcposix"])
+    dnl AC_CHECK_LIB(cposix, strerror, [LIBS="$LIBS -lcposix"])
+    dnl grep has stub for the absence of strerror
   ]
 )
